# beckyup

./: .gitignore  LICENSE  PLAN.md  README.md  SPEC.md  install.ps1  install.sh  main.py
.github/workflows/: ci.yml
backup_tool/: .gitignore  CONTEXT.md  main.py  pyproject.toml  requirements.txt
backup_tool/cli/: snapshot_ui.py  wizard.py
backup_tool/config/: default_config.json  manager.py
backup_tool/core/: backup_engine.py  device_detector.py  device_monitor.py  snapshot.py
backup_tool/docs/: PLAN-snapshots.md  SPEC-snapshots.md
backup_tool/tests/: test_backup_engine.py  test_device_detector.py  test_device_monitor.py  test_snapshot.py
backup_tool/utils/: auth.py  launchagent.py  logger.py  platform.py  ui.py
config/: default_config.json  manager.py
core/: backup_engine.py  device_monitor.py
tests/: test_backup_engine.py
